--- a/Students_app/Students_app.vcxproj.filters
+++ b/Students_app/Students_app.vcxproj.filters
@@ -64,7 +64,7 @@
       <Filter>Исходные файлы\Private\Core</Filter>
     </ClCompile>
     <ClCompile Include="Application.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\Private\Core</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -89,11 +89,11 @@
     <ClInclude Include="Menu.h">
       <Filter>Исходные файлы\Public\Core</Filter>
     </ClInclude>
-    <ClInclude Include="Application.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="Tools.h">
       <Filter>Исходные файлы\Public\Misc</Filter>
+    </ClInclude>
+    <ClInclude Include="Application.h">
+      <Filter>Исходные файлы\Public\Core</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
