--- a/Students_app/Students_app.vcxproj.filters
+++ b/Students_app/Students_app.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="Application_Group.cpp">
       <Filter>Исходные файлы\Private\Core</Filter>
     </ClCompile>
+    <ClCompile Include="Application_Department.cpp">
+      <Filter>Исходные файлы\Private\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Group.h">
