--- a/Students_app/Students_app.vcxproj
+++ b/Students_app/Students_app.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Application_Department.cpp" />
     <ClCompile Include="Application_Group.cpp" />
+    <ClCompile Include="Application_Students.cpp" />
     <ClCompile Include="Department.cpp" />
     <ClCompile Include="Group.cpp" />
     <ClCompile Include="Manager.cpp" />
