--- a/Students_app/Students_app.vcxproj.filters
+++ b/Students_app/Students_app.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="Application_Department.cpp">
       <Filter>Исходные файлы\Private\Core</Filter>
     </ClCompile>
+    <ClCompile Include="Application_Students.cpp">
+      <Filter>Исходные файлы\Private\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Group.h">
